--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,10 @@
        <%= p.description %>
      </div>
      <div>
-       <%= p.price %>
+       Size: <%= p.size %> cm
+     </div>
+     <div>
+       Price: <%= p.price %> grn
      </div>
    </div>
 <% end %>
