Add product button

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,10 +19,13 @@
      <div>
        Price: <%= p.price %> grn
      </div>
+     <div>
+       <button class="btn btn-sm btn-success">Add to cart</button>
+     </div>
    </div>
 <% end %>
 
 </div>
 </br>
-<button class="btn btn-primary btn-lg" onclick="something()">Click me</button>
+<button class="btn btn-primary btn-sm" onclick="something()">Click me</button>
 
