--- a/views/index.erb
+++ b/views/index.erb
@@ -29,3 +29,8 @@
 </br>
 <button class="btn btn-primary btn-sm" onclick="something()">Click me</button>
 
+<script type="text/javascript">
+    $(function() {
+        update_orders_input();
+    });
+</script>
