--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,7 +41,7 @@
 			    </ul>
 					<ul class="nav navbar-nav navbar-right ">
 						<li>
-							<form action="/cart" method="POST">
+							<form action="/cart" method="post">
 							<input id="orders_input" name="orders_input" type="hidden"/>
 							<input id="orders_button" type="submit" value="Cart(...)"/>
 							</form>
